# xiaomi-flashable-firmware-creator-gui

./: .gitignore  .gitmodules  README.md  pyproject.toml  renovate.json5
.github/: dependabot.yml
xiaomi_flashable_firmware_creator_gui/: __init__.py  __main__.py  about.py  main.py
xiaomi_flashable_firmware_creator_gui/components/: about.py  drop_space.py  input_dialog.py  message_box.py
xiaomi_flashable_firmware_creator_gui/helpers/: layout.py  misc.py  settings.py
xiaomi_flashable_firmware_creator_gui/i18n/: af.qm  ar.qm  bn-IN.qm  bn.qm  ca.qm  cs.qm  da.qm  de.qm  el.qm  en.qm  es-ES.qm  fa.qm  fi.qm  fr.qm  ga-IE.qm  he.qm  hi.qm  hr.qm  hu.qm  hy-AM.qm  id.qm  it.qm  ja.qm  ko.qm  ms.qm  ne-NP.qm  nl.qm  no.qm  pl.qm  pt-BR.qm  pt-PT.qm  ro.qm  ru.qm  sk.qm  sl.qm  sq.qm  sr.qm  sv-SE.qm  tr.qm  uk.qm  (+4 more)
xiaomi_flashable_firmware_creator_gui/i18n/develop/: extact_lang.sh  lang.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/af/: af.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ar/: ar.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/bn/: bn.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/bn-IN/: bn-IN.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ca/: ca.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/cs/: cs.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/da/: da.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/de/: de.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/el/: el.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/en/: en.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/es-ES/: es-ES.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/fa/: fa.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/fi/: fi.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/fr/: fr.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ga-IE/: ga-IE.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/he/: he.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/hi/: hi.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/hr/: hr.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/hu/: hu.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/hy-AM/: hy-AM.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/id/: id.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/it/: it.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ja/: ja.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ko/: ko.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ms/: ms.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ne-NP/: ne-NP.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/nl/: nl.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/no/: no.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/pl/: pl.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/pt-BR/: pt-BR.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/pt-PT/: pt-PT.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ro/: ro.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ru/: ru.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/sk/: sk.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/sl/: sl.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/sq/: sq.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/sr/: sr.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/sv-SE/: sv-SE.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/tr/: tr.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/uk/: uk.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/ur-PK/: ur-PK.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/vi/: vi.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/zh-CN/: zh-CN.ts
xiaomi_flashable_firmware_creator_gui/i18n/develop/zh-TW/: zh-TW.ts
