[tool.poetry]
name = "xiaomi_flashable_firmware_creator_gui"
version = "2.3.5"
description = "Create flashable firmware zip from MIUI Recovery ROMs!"
authors = ["yshalsager <ysh-alsager@hotmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator-gui/"
homepage = "https://xiaomifirmwareupdater.com/projects/xiaomi-flashable-firmware-creator/"
keywords = ["xiaomi", "firmware", "android"]
packages = [
    { include = "xiaomi_flashable_firmware_creator_gui" }
]
include = [
    "README.md",
    "pyproject.toml"
]
exclude = ["xiaomi_flashable_firmware_creator_gui/i18n/develop"]
readme = "README.md"

[tool.poetry.scripts]
xiaomi_flashable_firmware_creator_g = "xiaomi_flashable_firmware_creator_gui.main:main"

[tool.poetry.dependencies]
python = "^3.6"
PyQt5 = "^5.13.0"
xiaomi_flashable_firmware_creator = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "too-many-arguments",
    "too-many-statements",
    "too-many-instance-attributes",
    "logging-fstring-interpolation",
    "f-string-without-interpolation"
]
extension-pkg-whitelist = "PyQt5"
