[project]
name = "xiaomi_flashable_firmware_creator_gui"
version = "2.3.18"
description = "Create flashable firmware zip from MIUI Recovery and HyperOS ROMs!"
authors = [{ name = "yshalsager", email = "contact@yshalsager.com" }]
license = { file = "LICENSE" }
repository = "https://github.com/XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator-gui/"
homepage = "https://xmfirmwareupdater.com/projects/xiaomi-flashable-firmware-creator/"
keywords = ["xiaomi", "firmware", "android"]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pyqt5>=5.15.11",
    "xiaomi-flashable-firmware-creator>=2.2.14",
]

[dependency-groups]
dev = [
    "ruff>=0.7.1",
]

[project.scripts]
xiaomi_flashable_firmware_creator_g = "xiaomi_flashable_firmware_creator_gui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["xiaomi_flashable_firmware_creator_gui", "pyproject.toml", "README.md"]
exclude = ["xiaomi_flashable_firmware_creator_gui/i18n/develop"]

[tool.ruff]
fix = true
src = ["xiaomi_flashable_firmware_creator_gui"]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
